ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/`)
    kind: Rule
    services:
    - kind: Service
      name: nginx-random
      namespace: default
      port: 80   
      sticky:
        cookie:
          name: test
